@startuml

left to right direction
' top to bottom direction

package "Service"{
    entity Lesson
    entity PrivateLesson
    entity PublicLesson
    entity Offering
    entity Booking
    entity LessonCatalogue
    entity OfferingCatalogue
    entity BookingCatalogue
}
package "UserManagement"{
    entity User
    entity Instructor
    entity Client
    entity Child
    entity admin
    entity UserCatalogue
}

package "TimeManagement" {
    entity TimeSlot {}
    entity Schedule {}
    entity ScheduleCatalogue {}
}

package "Geography"{

    entity Location {}
    entity City {}
    entity LocationCatalogue {}
    entity CityCatalogue {}

    Location *-- LocationCatalogue
    City *-- CityCatalogue
}

Lesson *-- LessonCatalogue
Offering *-- OfferingCatalogue
Booking *-- BookingCatalogue

User *-- UserCatalogue
Client <|-- User
Instructor <|-- User
Client "1" -- "0. .*" Child : has >

(Client, Service.Offering) .. Booking
(Lesson, Instructor) .. Offering

admin -- UserCatalogue : Read-Delete >
admin -- LessonCatalogue : Create-Read-Delete >
admin -- OfferingCatalogue : View >
admin -- BookingCatalogue : View >
admin -- Geography.LocationCatalogue : View >
admin -- Geography.CityCatalogue : View >
admin -- TimeManagement.ScheduleCatalogue : View >

Geography.Location "1" -- "*" Lesson: have <

PrivateLesson <|-- Lesson
PublicLesson <|-- Lesson

UserManagement.admin -- ScheduleCatalogue : View >
Schedule *-- ScheduleCatalogue
Schedule "1" -- "1. .*" TimeSlot : Made-Of >
Geography.Location "1" -- "*" Schedule : have <


UserManagement.admin -- CityCatalogue : View >
UserManagement.admin -- LocationCatalogue : View >
Location "*" -- "1" City : >
Location "1" -- "*" Service.Schedule : have <
Location "1" -- "*" Service.Lesson: have <

@enduml